--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
   <div class="large-hero">
     <img src="assets/images/hero--large.jpg" />
     <h1>Таны нандин дурсамж.</h1>
-    <h2>Test.</h2>
+    <h2>Test hiisen ygaad garhgu bn.</h2>
     <h2>Ганцхан алхам үлдлээ.</h2>
     <p>Бид таны амьдралыг аз жаргал, адал явдлаар дүүргэх болно.</p>
     <p><a href="#">Өнөөдөр эхлэе</a></p>
